1.9 (unreleased)
----------------

- Nothing changed yet.


1.8 (2015-03-16)
----------------

- Don't require a X-PyPI-Last-Serial header on file downloads.
  (Thanks to @dstufft.)

- Increase our generation to help mirrors recover potential
  setuptools corruption after some data bug on PyPI.


1.7 (2014-12-14)
----------------

- Fix #54 by reordering the simple index page and file fetching
  parts. Thanks @dstufft for the inspiration.

- Stop syncing serversig files and even start removing them.


1.6.1 (2014-09-24)
------------------

- Create a new generation to enforce a full sync when upgrading.
  This is required to get the canonical names for all packages.

1.6 (2014-09-24)
----------------

- Implement canonical package directory names to support an upcoming PIP
  release and other tools. (Thanks to @dstufft)

- Fix a race condition where workers could get stuck indefinitely waiting for
  another item in a depleted queue. (Thanks to hongqn)

1.5 (2014-07-21)
----------------

- Delete broken tests that I forgot to remove.

- Reduce the officially sanctioned maximum number of connections.

1.4 (2014-04-15)
----------------

- Move towards replacing the XMLRPC API with JSON to make our requests
  cacheable. Also reduces the amount of requests needed dramatically.

- Remove apache stats script as this information is no longer being used anyway.

1.3 (2014-02-16)
----------------

- Move to xmlrpc2 to get SSL verification on XML-RPC calls, too. (Fixes #40 and
  big thanks to @ewdurbin)

1.2 (2014-01-08)
----------------

- Potential performance improvement: use requests' session object to allow HTTP
  pipelining. Thanks to Wouter Bolsterlee for the recommendation in #39.


1.1 (2013-11-26)
----------------

- Made code Python 2.6 compatible. Thanks to @ewdurbin for the pull request.


1.0.5 (2013-07-25)
------------------

- Refactor lock acquisition to avoid shadowing exceptions when creating the
  lockfile vs. acquiring the lock.
