@@ -1,6 +1,5 @@
 from bandersnatch.main import main
 import bandersnatch.mirror
-import logging.config
 import mock
 import os.path
 import pytest
@@ -51,29 +50,30 @@ def test_main_reads_config_values(mirror_mock):
     assert mirror_mock().synchronize.called
 
 
-def test_main_reads_log_config_value(mirror_mock, logging_mock, tmpconfig):
-    config = str(tmpconfig/'with-logging.conf')
-    sys.argv = ['bandersnatch', '-c', config, 'mirror']
-    assert os.path.exists(config)
-    assert isinstance(bandersnatch.mirror.Mirror, mock.Mock)
-    assert isinstance(logging.config.fileConfig, mock.Mock)
+def test_main_reads_custom_config_values(
+        mirror_mock, logging_mock, customconfig):
+    conffile = str(customconfig / 'bandersnatch.conf')
+    sys.argv = ['bandersnatch', '-c', conffile, 'mirror']
     main()
     (log_config, kwargs) = logging_mock.call_args_list[0]
-    assert log_config == (str(tmpconfig/'bandersnatch-log.conf'),)
+    assert log_config == (str(customconfig / 'bandersnatch-log.conf'),)
+    assert not mirror_mock.call_args[1]['delete_packages']
     assert mirror_mock().synchronize.called
 
 
 @pytest.fixture
-def tmpconfig(tmpdir):
+def customconfig(tmpdir):
     default = os.path.dirname(bandersnatch.__file__) + '/default.conf'
     config = open(default).read()
-    config = config.replace('/srv/pypi', str(tmpdir/'pypi'))
-    with open(str(tmpdir/'bandersnatch.conf'), 'w') as f:
+    config = config.replace('/srv/pypi', str(tmpdir / 'pypi'))
+    with open(str(tmpdir / 'bandersnatch.conf'), 'w') as f:
         f.write(config)
     config = config.replace('; log-config', 'log-config')
+    config = config.replace('delete-packages = true',
+                            'delete-packages = false')
     config = config.replace(
         '/etc/bandersnatch-log.conf',
-        str(tmpdir/'bandersnatch-log.conf'))
-    with open(str(tmpdir/'with-logging.conf'), 'w') as f:
+        str(tmpdir / 'bandersnatch-log.conf'))
+    with open(str(tmpdir / 'bandersnatch.conf'), 'w') as f:
         f.write(config)
     return tmpdir
